Initial support for inviting users to a campaign
