# public/openapi.yml
@@ -6,7 +6,7 @@ info:
     character generator, campaign manager, dice roller, and more.
   contact:
     email: omni@digitaldarkness.com
-  version: 1.2.0
+  version: 1.3.0
 externalDocs:
   description: Find out more about Commlink
   url: https://commlink.digitaldarkness.com/about
@@ -38,6 +38,140 @@ tags:
     description: Operations about users
 
 paths:
+  /campaigns:
+    get:
+      summary: Return all campaigns for the user
+      description: |
+        Return all campaigns for a user, including registered, GMed, and those
+        they play in.
+      operationId: campaigns-index
+      responses:
+        '200':
+          description: Collection of campaigns.
+          content:
+            application/json:
+              schema:
+                example:
+                  data:
+                    - characters:
+                        - id: '65776d7c77223955eee96ec1'
+                          name: 'Conan the Agrarian'
+                          owner:
+                            id: 42
+                            name: 'Mike F'
+                          links:
+                            self: '/characters/cyberpunkred/65776d7c77223955eee96ec1'
+                      description: |
+                        Low-level campaign for fun, Chooms. Still looking for a GM.
+                      id: 3
+                      gm: null
+                      name: 'Night City Rejects'
+                      options:
+                        nightCityTarot: true
+                      players:
+                        - id: 6
+                          name: 'Bob K'
+                          status: 'invited'
+                        - id: 99
+                          name: 'Phil S'
+                          status: 'accepted'
+                      registered_by:
+                        id: 42
+                        name: 'Mike F'
+                      system: 'cyberpunkred'
+                      links:
+                        self: '/campaigns/3'
+                  links:
+                    collection: '/campaigns'
+                    root: '/'
+                properties:
+                  data:
+                    items:
+                      $ref: '#/components/schemas/CampaignFull'
+                    type: array
+                  links:
+                    $ref: '#/components/schemas/Links'
+                required:
+                  - data
+                  - links
+                type: object
+        '401':
+          $ref: '#/components/schemas/ErrorResponseUnauthenticated'
+      tags:
+        - campaign
+  /campaigns/{campaign_id}:
+    parameters:
+      - name: campaign_id
+        in: path
+        required: true
+        schema:
+          type: integer
+    delete:
+      summary: Soft-delete a campaign
+      operationId: campaigns-destroy
+      responses:
+        '204':
+          description: The campaign has been deleted.
+        '401':
+          $ref: '#/components/schemas/ErrorResponseUnauthenticated'
+        '403':
+          $ref: '#/components/schemas/ErrorResponseForbidden'
+      tags:
+        - campaign
+    get:
+      summary: Return a single campaign
+      operationId: campaigns-show
+      responses:
+        '200':
+          description: Single campaign.
+          content:
+            application/json:
+              schema:
+                example:
+                  data:
+                    characters:
+                      - id: '65776d7c77223955eee96ec1'
+                        name: 'Conan the Agrarian'
+                        owner:
+                          id: 42
+                          name: 'Mike F'
+                        links:
+                          self: '/characters/cyberpunkred/65776d7c77223955eee96ec1'
+                    description: |
+                      Low-level campaign for fun, Chooms. Still looking for a GM.
+                    id: 3
+                    gm: null
+                    name: 'Night City Rejects'
+                    options:
+                      nightCityTarot: true
+                    players:
+                      - id: 6
+                        name: 'Bob K'
+                        status: 'invited'
+                      - id: 99
+                        name: 'Phil S'
+                        status: 'accepted'
+                    registered_by:
+                      id: 42
+                      name: 'Mike F'
+                    system: 'cyberpunkred'
+                    links:
+                      self: '/campaigns/3'
+                      collection: '/campaigns'
+                      root: '/'
+                properties:
+                  data:
+                    $ref: '#/components/schemas/CampaignFull'
+                  links:
+                    $ref: '#/components/schemas/Links'
+                required:
+                  - data
+                  - links
+                type: object
+        '401':
+          $ref: '#/components/schemas/ErrorResponseUnauthenticated'
+      tags:
+        - campaign
   /campaigns/{campaign_id}/events:
     parameters:
       - name: campaign_id
@@ -1631,12 +1765,40 @@ components:
         _links:
           $ref: '#/components/schemas/Links'
       type: object
+    CampaignFull:
+      properties:
+        characters:
+          items:
+            $ref: '#/components/schemas/CharacterMinimal'
+          type: array
+        description:
+          nullable: true
+          type: string
+        id:
+          type: integer
+        gm:
+          $ref: '#/components/schemas/UserMinimal'
+        name:
+          type: string
+        options:
+          type: object
+        players:
+          items:
+            $ref: '#/components/schemas/UserMinimal'
+          type: array
+        registered_by:
+          $ref: '#/components/schemas/UserMinimal'
+        system:
+          type: string
+      type: object
     Character:
       properties:
         campaign_id:
           type: integer
         id:
           type: string
+        links:
+          $ref: '#/components/schemas/Links'
         owner:
           format: email
           type: string
@@ -1646,6 +1808,20 @@ components:
         - id
         - owner
         - system
+      type: object
+    CharacterMinimal:
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        owner:
+          properties:
+            id:
+              type: integer
+            name:
+              type: string
+          type: object
       type: object
     CyberpunkredCharacter:
       allOf:
@@ -2752,6 +2928,18 @@ components:
         - playingIn
         - roles
         - _links
+      type: object
+    UserMinimal:
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        status:
+          type: string
+      required:
+        - id
+        - name
       type: object
     WebhookAuto:
       properties:
